@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4635 2004/01/28 15:41:47 xtraeme Exp $
+$NetBSD: CHANGES,v 1.4636 2004/01/28 15:45:56 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -520,3 +520,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated mule to 2.3nb2 [xtraeme 2004-01-28]
 	Updated xmame to 0.78.1nb1 [xtraeme 2004-01-28]
 	Updated xmess to 0.78.1nb1 [xtraeme 2004-01-28]
+	Updated minivmac to 0.1.7nb1 [xtraeme 2004-01-28]
